--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,21 @@ body {
     height: 100vh;
 }
 
+header {
+    height: 80px;
+}
+
 main {
-    height: 75vh;
+    height: 70vh;
     color: white;
 }
 
+img {
+    width: 100%;
+}
+
 h1 {
-    margin-top: 25px;
+    margin-top: 60px;
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     text-align: center;  
@@ -33,7 +41,7 @@ p {
 
 button {
     display: block;
-    margin: 20px  auto;
+    margin: 40px  auto;
     padding: 10px 40px;
     font-size: 10px;
     border-radius: 20px;
@@ -58,9 +66,6 @@ footer {
 
 
 .left {
-    background-image: url(../img/illustration-mockups.svg);
-    background-repeat: no-repeat;
-    background-size: 100%;
     margin-left: 40px;
     width: 80%;
     height: 50%;
@@ -68,12 +73,12 @@ footer {
 
 .right {
     width: 300px;
-    height: 35%;
+    height: 50%;
     margin-right: auto;
     margin-left: auto;
 }
 .fab {
-    margin: 10px 5px;
+    margin: 80px 5px;
     font-size: 30px;
     color: white;
 }
@@ -88,19 +93,27 @@ button:hover {
         background-repeat: no-repeat;
     }
 
+    header {
+        margin-top: 50px;
+    }
+
     main {
         height: 500px;
+    }
+
+    img {
+        width: 100%;
     }
 
     h1 {
         font-size: 35px;
         margin-top: 40px;
-        margin-left: 80px;
+        margin-left: 30px;
         padding-right: 100px;
         text-align: left;
     }
     p {
-        margin-left: 80px;
+        margin-left: 30px;
         font-size: 20px;
         font-weight: thin;
         line-height: 1.8;
@@ -113,12 +126,13 @@ button:hover {
         font-weight: 300;
         margin-top: 30px;
         letter-spacing: 1px;
-        margin-left: 80px;
+        margin-left: 30px;
         padding: 15px 60px;
         border-radius: 25px;
     }
 
     footer {
+        height: 200px;
         margin-top: 20px;
         margin-right: 80px;
         text-align: right;
@@ -126,19 +140,16 @@ button:hover {
     .bg {
         height: 100px;
         background-size: 300px;
-        margin-top: 50px;
     }
 
     .left {
         float: left;
-        height: 500px;
-        width: 45%; 
+        width: 45%;
     }
 
     .right {
         float: right;
-        width: 50%;
-        height: 500px; 
+        width: 45%;
     }
 
     button:hover {
